--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- Core (sovereign green) -->
     <circle cx="20" cy="20" r="4"
-        fill="#50cc31" />
+        fill="#48e662" />
 </svg>
                 <span class="logo-text">SECS</span>
             </a>
@@ -394,7 +394,7 @@
                 Deterministic substrate. Governed continuity. Truth‑aligned computation.
             </p>
         </div>
-
+<BR>
         <div class="footer-section">
             <h4>Doctrine</h4>
             <ul class="footer-links">
