Refactor carousel: stable card width, deterministic scroll, remove legacy code

--- a/becoming-sovereign.html
+++ b/becoming-sovereign.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Doctrine — SECS Sovereign</title>
+  <title>Becoming Sovereign — SECS Sovereign</title>
   <link rel="stylesheet" href="assets/css/style.css?v=3">
 </head>
 
@@ -60,44 +60,87 @@
         </div>
     </nav>
 
-    <!-- Doctrinal Surface -->
+    <!-- Becoming Sovereign Surface -->
     <main class="container doctrinal-surface">
 
-        <h1 class="doctrine-title">SECS Doctrine</h1>
+        <h1 class="doctrine-title">Becoming Sovereign</h1>
         <p class="doctrine-subtitle">
-            The doctrinal substrate that shapes behaviour, guarantees determinism, and anchors the Sovereign system.
+            The path from external observer to governed participant — the alignment, truth‑conditions, 
+            and behavioural commitments required to operate inside the SECS Sovereign substrate.
         </p>
 
         <div class="doctrine-grid">
 
             <section class="doctrine-card">
-                <h2>Continuity</h2>
-                <p>Continuity ensures a verifiable, auditable progression of state across execution windows so systems can be reconciled deterministically.</p>
+                <h2>Sovereignty as Alignment</h2>
+                <p>
+                    Becoming sovereign is not a commercial transaction. It is the moment an external 
+                    entity aligns with the substrate’s truth‑conditions — determinism, collapse, purity, 
+                    and continuity. Sovereignty is granted through alignment, not purchase.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Deterministic Propagation</h2>
-                <p>Deterministic propagation means identical inputs produce identical state transitions, enabling reproducibility and low‑drift replication.</p>
+                <h2>The First Sovereign</h2>
+                <p>
+                    The first external operator to run governed workloads becomes the first sovereign 
+                    witness. This is a doctrinal milestone: the substrate acknowledges an external 
+                    participant capable of operating under its invariants.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Governance</h2>
-                <p>Governance defines how changes to governed lanes are proposed, reviewed, and enacted — keeping the substrate aligned with stakeholder intent.</p>
+                <h2>Governed Participation</h2>
+                <p>
+                    Access to governed execution lanes is not open. Participants operate within a 
+                    defined perimeter of invariants, collapse rules, and behavioural guarantees. 
+                    There is no “best‑effort” mode — only governed or rejected.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Zero‑Drift</h2>
-                <p>Zero‑drift is the commitment that, barring explicit governance changes, system state remains synchronized across replicas.</p>
+                <h2>Non‑Forkable Guarantees</h2>
+                <p>
+                    The guarantees of SECS Sovereign — determinism, purity, mode separation, collapse 
+                    correctness — cannot be cloned or reimplemented. Becoming sovereign does not grant 
+                    the right to fork the doctrine or replicate the substrate.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Narrative Closure</h2>
-                <p>Narrative closure defines how episodes of activity are concluded and archived as part of the continuity model.</p>
+                <h2>Alignment Requirements</h2>
+                <p>
+                    Sovereign participants must operate deterministic workloads, respect collapse, 
+                    maintain invariant‑safe behaviour, and accept the substrate’s authority over 
+                    execution. Misaligned workloads are rejected or collapsed.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Doctrine as Foundation</h2>
-                <p>The doctrine is the philosophical substrate that guides design choices, operational guarantees, and the project’s public commitments.</p>
+                <h2>Public vs. Sovereign Surfaces</h2>
+                <p>
+                    The public repository exposes primitive engines, demonstrations, and the 
+                    Permatest Beacon. Sovereign participation extends into governed execution lanes, 
+                    deeper substrate capabilities, and continuity‑anchored observability.
+                </p>
+            </section>
+
+            <section class="doctrine-card">
+                <h2>Sovereign Participation Terms</h2>
+                <p>
+                    Commercial terms follow doctrinal alignment — never the reverse. Pricing, usage, 
+                    and deployment models are negotiated only after an operator demonstrates readiness 
+                    to uphold the substrate’s behavioural constraints.
+                </p>
+            </section>
+
+            <section class="doctrine-card">
+                <h2>Initiating Sovereign Integration</h2>
+                <p>
+                    Entities begin by engaging with the doctrine, Deeper SECS, and x = true. 
+                    Once alignment is demonstrated, direct contact initiates the path toward 
+                    sovereign participation and governed execution.
+                </p>
             </section>
 
         </div>
@@ -105,7 +148,7 @@
     </main>
 
     <!-- Footer -->
-   <footer class="footer">
+    <footer class="footer">
     <div class="footer-container">
 
         <div class="footer-section">
