--- a/truth-model.html
+++ b/truth-model.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Doctrine — SECS Sovereign</title>
+  <title>Truth Model — SECS Sovereign</title>
   <link rel="stylesheet" href="assets/css/style.css?v=3">
 </head>
 
@@ -60,44 +60,85 @@
         </div>
     </nav>
 
-    <!-- Doctrinal Surface -->
+    <!-- Truth Model Surface -->
     <main class="container doctrinal-surface">
 
-        <h1 class="doctrine-title">SECS Doctrine</h1>
+        <h1 class="doctrine-title">Truth Model</h1>
         <p class="doctrine-subtitle">
-            The doctrinal substrate that shapes behaviour, guarantees determinism, and anchors the Sovereign system.
+            The formal definition of truth inside SECS Sovereign — the conditions under which 
+            behaviour is valid, execution is permitted, and the substrate remains itself.
         </p>
 
         <div class="doctrine-grid">
 
             <section class="doctrine-card">
-                <h2>Continuity</h2>
-                <p>Continuity ensures a verifiable, auditable progression of state across execution windows so systems can be reconciled deterministically.</p>
+                <h2>Truth as a Structural Property</h2>
+                <p>
+                    In SECS Sovereign, truth is not a value or belief. It is a structural property 
+                    of the substrate. A behaviour is true if and only if it satisfies all declared 
+                    invariants and preserves continuity.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Deterministic Propagation</h2>
-                <p>Deterministic propagation means identical inputs produce identical state transitions, enabling reproducibility and low‑drift replication.</p>
+                <h2>Truth‑Condition Inputs</h2>
+                <p>
+                    Inputs are evaluated against doctrine before dispatch. If an input violates 
+                    invariants, it is rejected or collapsed. Only governed, invariant‑safe inputs 
+                    may enter the substrate.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Governance</h2>
-                <p>Governance defines how changes to governed lanes are proposed, reviewed, and enacted — keeping the substrate aligned with stakeholder intent.</p>
+                <h2>Truth‑Condition Outputs</h2>
+                <p>
+                    Outputs are true when they are the deterministic result of governed inputs 
+                    under invariant‑preserving execution. No randomness, no drift, no probabilistic 
+                    behaviour is permitted.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Zero‑Drift</h2>
-                <p>Zero‑drift is the commitment that, barring explicit governance changes, system state remains synchronized across replicas.</p>
+                <h2>Continuity as Truth</h2>
+                <p>
+                    Continuity is the substrate’s memory of itself. A state transition is true 
+                    when it extends continuity without contradiction, ambiguity, or loss of 
+                    narrative closure.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Narrative Closure</h2>
-                <p>Narrative closure defines how episodes of activity are concluded and archived as part of the continuity model.</p>
+                <h2>Purity as Truth</h2>
+                <p>
+                    Purity is the absence of impurity — nondeterminism, drift, fairness bleed, 
+                    topology dependence. A behaviour is true when it preserves purity across 
+                    execution windows.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Doctrine as Foundation</h2>
-                <p>The doctrine is the philosophical substrate that guides design choices, operational guarantees, and the project’s public commitments.</p>
+                <h2>Collapse as Truth Enforcement</h2>
+                <p>
+                    Collapse is the mechanism by which the substrate restores truth. When behaviour 
+                    diverges, collapse eliminates impurity and re‑anchors the system to its 
+                    invariant truth‑state.
+                </p>
+            </section>
+
+            <section class="doctrine-card">
+                <h2>Truth‑State Integrity</h2>
+                <p>
+                    The substrate maintains a single global truth‑state. All workers, modes, and 
+                    execution paths must converge on the same truth‑state or collapse is triggered.
+                </p>
+            </section>
+
+            <section class="doctrine-card">
+                <h2>Truth and Non‑Forkability</h2>
+                <p>
+                    Truth cannot be forked. The substrate’s truth‑state is singular, canonical, 
+                    and non‑replicable. Any attempt to fork truth results in collapse.
+                </p>
             </section>
 
         </div>
@@ -105,7 +146,7 @@
     </main>
 
     <!-- Footer -->
-   <footer class="footer">
+ <footer class="footer">
     <div class="footer-container">
 
         <div class="footer-section">
