--- a/x=true.html
+++ b/x=true.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Doctrine — SECS Sovereign</title>
+  <title>x = true — SECS Sovereign</title>
   <link rel="stylesheet" href="assets/css/style.css?v=3">
 </head>
 
@@ -60,44 +60,96 @@
         </div>
     </nav>
 
-    <!-- Doctrinal Surface -->
+    <!-- x = true Surface -->
     <main class="container doctrinal-surface">
 
-        <h1 class="doctrine-title">SECS Doctrine</h1>
+        <h1 class="doctrine-title">x = true</h1>
         <p class="doctrine-subtitle">
-            The doctrinal substrate that shapes behaviour, guarantees determinism, and anchors the Sovereign system.
+            The physics‑level validation of SECS Sovereign — the truth‑conditions, invariants, 
+            and computational laws the substrate must satisfy to exist as itself.
         </p>
 
         <div class="doctrine-grid">
 
             <section class="doctrine-card">
-                <h2>Continuity</h2>
-                <p>Continuity ensures a verifiable, auditable progression of state across execution windows so systems can be reconciled deterministically.</p>
+                <h2>Truth‑Condition Execution</h2>
+                <p>
+                    SECS Sovereign executes only when all declared truth‑conditions hold. 
+                    If any invariant is violated, execution collapses deterministically. 
+                    This ensures the substrate never enters an undefined or probabilistic state.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Deterministic Propagation</h2>
-                <p>Deterministic propagation means identical inputs produce identical state transitions, enabling reproducibility and low‑drift replication.</p>
+                <h2>Determinism Envelope</h2>
+                <p>
+                    The substrate guarantees identical outputs for identical governed inputs 
+                    across all time, load, and topology. This is not statistical determinism — 
+                    it is exact determinism within the declared resolution of the system.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Governance</h2>
-                <p>Governance defines how changes to governed lanes are proposed, reviewed, and enacted — keeping the substrate aligned with stakeholder intent.</p>
+                <h2>Collapse Correctness</h2>
+                <p>
+                    Divergence is not tolerated. When behaviour deviates from the governed path, 
+                    the substrate isolates, collapses, and restores invariants. Collapse is a 
+                    correctness mechanism, not an error state.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Zero‑Drift</h2>
-                <p>Zero‑drift is the commitment that, barring explicit governance changes, system state remains synchronized across replicas.</p>
+                <h2>Purity Preservation</h2>
+                <p>
+                    Impurity — nondeterminism, drift, fairness bleed, topology dependence — 
+                    cannot survive execution. The substrate rejects impurity at the boundary 
+                    before it can propagate.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Narrative Closure</h2>
-                <p>Narrative closure defines how episodes of activity are concluded and archived as part of the continuity model.</p>
+                <h2>Compliance With Computational Laws</h2>
+                <p>
+                    SECS Sovereign adheres to foundational computer science laws: 
+                    deterministic state transitions, referential transparency within governed mode, 
+                    and invariant‑preserving execution semantics.
+                </p>
             </section>
 
             <section class="doctrine-card">
-                <h2>Doctrine as Foundation</h2>
-                <p>The doctrine is the philosophical substrate that guides design choices, operational guarantees, and the project’s public commitments.</p>
+                <h2>Identity‑Free Fairness</h2>
+                <p>
+                    Fairness is enforced without identity, tenancy, or routing metadata. 
+                    The substrate evaluates behaviour, not actors, ensuring deterministic fairness 
+                    without probabilistic heuristics.
+                </p>
+            </section>
+
+            <section class="doctrine-card">
+                <h2>Topology‑Free Execution</h2>
+                <p>
+                    Execution is invariant across worker topologies. No noisy neighbours, 
+                    no scheduler heuristics, no locality bias. Behaviour remains identical 
+                    regardless of physical layout.
+                </p>
+            </section>
+
+            <section class="doctrine-card">
+                <h2>Invariant Timing</h2>
+                <p>
+                    Timing envelopes remain stable across load and time. The substrate’s 
+                    timing behaviour is deterministic, measurable, and validated continuously 
+                    through the Permatest Beacon.
+                </p>
+            </section>
+
+            <section class="doctrine-card">
+                <h2>Non‑Forkability</h2>
+                <p>
+                    The substrate cannot be cloned or imitated. Its guarantees emerge from 
+                    doctrine, invariants, and collapse rules — not configuration. 
+                    Partial replication is impossible.
+                </p>
             </section>
 
         </div>
@@ -105,7 +157,7 @@
     </main>
 
     <!-- Footer -->
-   <footer class="footer">
+<footer class="footer">
     <div class="footer-container">
 
         <div class="footer-section">
