--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SECS Sovereign Execution and Collapse Substrate</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;700&display=swap" rel="stylesheet">
-<link href="assets/css/style.css" rel="stylesheet">
+<link href="assets/css/style.css?v=2" rel="stylesheet">
 
 </head>
 <body>
@@ -25,49 +25,56 @@
     <div id="particles"></div>
 
     <!-- Navigation -->
-    <nav id="navbar">
-        <div class="nav-container">
-            <a href="#secs" class="logo-link">
-                <svg class="logo-svg" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
-    <defs>
-        <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-            <stop offset="0%" style="stop-color:#FF5E00;stop-opacity:1" />
-            <stop offset="100%" style="stop-color:#00B2FF;stop-opacity:1" />
-        </linearGradient>
-    </defs>
+<nav id="navbar">
+    <div class="nav-container">
+        <a href="/#SECS" class="logo-link">
+            <svg class="logo-svg" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                    <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                        <stop offset="0%" style="stop-color:#FF5E00;stop-opacity:1" />
+                        <stop offset="100%" style="stop-color:#00B2FF;stop-opacity:1" />
+                    </linearGradient>
+                </defs>
 
-    <!-- Outer ring -->
-    <circle cx="20" cy="20" r="18"
-        fill="none"
-        stroke="url(#logoGradient)"
-        stroke-width="2" />
+                <!-- Outer ring -->
+                <circle cx="20" cy="20" r="18"
+                    fill="none"
+                    stroke="url(#logoGradient)"
+                    stroke-width="2" />
 
-    <!-- Middle ring -->
-    <circle cx="20" cy="20" r="12"
-        fill="none"
-        stroke="url(#logoGradient)"
-        stroke-width="1.5"
-        opacity="0.4" />
+                <!-- Middle ring -->
+                <circle cx="20" cy="20" r="12"
+                    fill="none"
+                    stroke="url(#logoGradient)"
+                    stroke-width="1.5"
+                    opacity="0.4" />
 
-    <!-- Core (sovereign green) -->
-    <circle cx="20" cy="20" r="4"
-        fill="#48e662" />
-</svg>
-                <span class="logo-text">SECS</span>
-            </a>
+                <!-- Core (sovereign green) -->
+                <circle cx="20" cy="20" r="4"
+                    fill="#48e662" />
+            </svg>
+            <span class="logo-text">SECS</span>
+        </a>
+
+
             <ul class="nav-links" id="navLinks">
-                <li><a href="#SECS" class="nav-link">SECS</a></li>
-                <li><a href="#quick-secs" class="nav-link">Quick SECS</a></li>
-                <li><a href="#secs-explained" class="nav-link">SECS Explained</a></li>
-
+                <li><a href="/#SECS" class="nav-link">SECS</a></li>
+                <li><a href="/#quick-secs" class="nav-link">Quick SECS</a></li>
+                <li><a href="/#secs-explained" class="nav-link">SECSplained</a></li>
+                <li><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
+                <li><a href="/deeper-secs.html" class="nav-link">Deeper SECS</a></li>
+                <li><a href="/x=true.html" class="nav-link">x = true</a></li>
+                <li><a href="/becoming-sovereign.html" class="nav-link active">Becoming Sovereign</a></li>
+                <li><a href="/secs-cockpit.html" class="nav-link disabled">SECS Cockpit</a></li>
             </ul>
-            <div class="menu-toggle" id="menuToggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+
+        <div class="menu-toggle" id="menuToggle">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
-    </nav>
+    </div>
+</nav>
 
    <!-- Hero Section -->
 <section class="hero" id="SECS">
@@ -394,12 +401,15 @@
                 Deterministic substrate. Governed continuity. Truth‑aligned computation.
             </p>
         </div>
-<BR>
+
         <div class="footer-section">
             <h4>Doctrine</h4>
             <ul class="footer-links">
+                <li><a href="/doctrine.html">SECS Doctrinally</a></li>
+                <li><a href="/deeper-secs.html">Deeper SECS</a></li>
+                <li><a href="/x=true.html">x = true</a></li>
                 <li><a href="/truth-model.html">Truth Model</a></li>
-                <li><a href="/licensing.html">Licensing Overview</a></li>
+                <li><a href="/becoming-sovereign.html">Becoming Sovereign</a></li>
             </ul>
         </div>
 
@@ -412,11 +422,11 @@
             <div class="footer-contact-blurb">
                 <h5>Connect With the Substrate</h5>
                 <p>
-                    SECS Sovereign is built on continuity, governance, and narrative clarity — 
-                    and so is the way we communicate. If you’re exploring the doctrine, seeking 
+                    SECS Sovereign is built on continuity, governance, and narrative clarity —
+                    and so is the way we communicate. If you’re exploring the doctrine, seeking
                     alignment, or initiating a propagation event, reach out directly.<br><br>
 
-                    Every inquiry becomes part of the lived history of the system. <br><Br>
+                    Every inquiry becomes part of the lived history of the system.<br><br>
                     No noise. No drift. Just signal.<br><br>
                 </p>
             </div>
@@ -428,12 +438,12 @@
         <p>© <span id="year"></span> SECS Sovereign. All rights governed.</p>
     </div>
 </footer>
+
 <script>
-    // Auto-update year
     document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 
-<script src="assets/js/main.js"></script>
+<script src="assets/js/main.js?v=2"></script>
 <script>
 document.addEventListener("DOMContentLoaded", function () {
 
