--- a/deeper-secs.html
+++ b/deeper-secs.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Deeper SECS — SECS Sovereign</title>
-  <link rel="stylesheet" href="assets/css/style.css?v=3">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css?v=3">
 </head>
 
 <body>
@@ -48,7 +49,7 @@
                 <li><a href="/#secs-explained" class="nav-link">SECSplained</a></li>
                 <li><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
                 <li><a href="/deeper-secs.html" class="nav-link active">Deeper SECS</a></li>
-                <li><a href="/x-true.html" class="nav-link">x = true</a></li>
+                <li><a href="/x=true.html" class="nav-link">x = true</a></li>
                 <li><a href="/cockpit.html" class="nav-link disabled">SECS Cockpit (Coming Soon)</a></li>
             </ul>
 
