Nav: add Becoming Sovereign link to deeper-secs; footer: replace Licensing Overview with Becoming Sovereign

--- a/deeper-secs.html
+++ b/deeper-secs.html
@@ -50,6 +50,7 @@
                 <li><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
                 <li><a href="/deeper-secs.html" class="nav-link active">Deeper SECS</a></li>
                 <li><a href="/x=true.html" class="nav-link">x = true</a></li>
+                <li><a href="/becoming-sovereign.html" class="nav-link">Becoming Sovereign</a></li>
                 <li><a href="/cockpit.html" class="nav-link disabled">SECS Cockpit (Coming Soon)</a></li>
             </ul>
 
@@ -60,7 +61,7 @@
     </nav>
 
     <!-- Deep SECS Surface -->
-    <main class="container doctrinal-surface">
+    <main class="container doctrinal-surface with-nav-offset">
 
         <h1 class="doctrine-title">Deeper SECS</h1>
         <p class="doctrine-subtitle">
@@ -173,7 +174,7 @@
                     <li><a href="/deeper-secs.html">Deeper SECS</a></li>
                     <li><a href="/x-true.html">x = true</a></li>
                     <li><a href="/truth-model.html">Truth Model</a></li>
-                    <li><a href="/licensing.html">Licensing Overview</a></li>
+                    <li><a href="/becoming-sovereign.html">Becoming Sovereign</a></li>
                 </ul>
             </div>
 
