Chore: bump CSS query param to v=4 to bust cache site-wide

--- a/doctrine.html
+++ b/doctrine.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Doctrine — SECS Sovereign</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css?v=3">
+    <link rel="stylesheet" href="assets/css/style.css?v=4">
 </head>
 
 <body>
@@ -62,7 +62,7 @@
     </nav>
 
     <!-- Doctrinal Surface -->
-    <main class="container doctrinal-surface">
+    <main class="container doctrinal-surface with-nav-offset">
 
         <h1 class="doctrine-title">SECS Doctrine</h1>
         <p class="doctrine-subtitle">
