--- a/pricing.html
+++ b/pricing.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Pricing — SECS Sovereign</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.css?v=2">
+  <link rel="stylesheet" href="assets/css/style.css?v=4">
 </head>
 <body>
   <header class="site-header">
@@ -20,7 +20,7 @@
     </div>
   </header>
 
-  <main class="container">
+  <main class="container with-nav-offset">
     <h1>Pricing</h1>
     <div class="pricing-grid">
       <article class="card">
