SEO: add meta description to all pages

--- a/truth-model.html
+++ b/truth-model.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="SECS Sovereign — deterministic substrate, governed continuity, and truth-aligned computation.">
   <title>Truth Model — SECS Sovereign</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css?v=4">
