--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="SECS Sovereign — deterministic substrate, governed continuity, and truth-aligned computation.">
     <title>SECS Sovereign Execution and Collapse Substrate</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;500;700&display=swap" rel="stylesheet">
 <link href="assets/css/style.css?v=4" rel="stylesheet">
