Add LinkedIn profile link to footer across pages

--- a/becoming-sovereign.html
+++ b/becoming-sovereign.html
@@ -175,6 +175,14 @@
             <h4>Connect</h4>
             <ul class="footer-links">
                 <li><a href="mailto:jay@secs.observer">jay@secs.observer</a></li>
+                <li>
+                    <a href="https://www.linkedin.com/in/jay-carpenter-ba3a6161/" target="_blank" rel="noopener noreferrer" class="linkedin-link" aria-label="Jay Carpenter on LinkedIn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" style="vertical-align:middle;margin-right:6px;">
+                            <path d="M4.98 3.5C4.98 4.88 3.88 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8h5v16H0zM7 8h4.8v2.2h.1c.7-1.3 2.4-2.6 4.9-2.6C23 7.6 24 12 24 16.9V24H19v-6.5c0-1.6 0-3.7-2.3-3.7S14 16 14 17.8V24H9V8z" />
+                        </svg>
+                        Jay Carpenter
+                    </a>
+                </li>
             </ul>
 
             <div class="footer-contact-blurb">
