Add SECSy section and styles

--- a/index.html
+++ b/index.html
@@ -392,6 +392,57 @@
 
 
 
+<!-- SECSy Section -->
+<section id="secsy" class="doctrinal-surface secsy-surface">
+    <div class="doctrine-grid secsy-grid">
+
+        <div class="doctrine-card secsy-header">
+            <h2 class="doctrine-title glitch-title" data-text="WHEN THINGS GET SECSy">
+                WHEN THINGS GET SECSy
+            </h2>
+            <p class="doctrine-subtitle">
+                A new mode of system behaviour emerges.
+            </p>
+        </div>
+
+        <div class="doctrine-card secsy-card">
+            <h3>Continuity Becomes Inevitable</h3>
+            <p>Systems stop “trying” to stay in sync. Continuity asserts itself as a structural property.</p>
+        </div>
+
+        <div class="doctrine-card secsy-card">
+            <h3>Drift Disappears</h3>
+            <p>No more replicas wandering off. Zero‑drift becomes the default state.</p>
+        </div>
+
+        <div class="doctrine-card secsy-card">
+            <h3>Truth Enforces Itself</h3>
+            <p>Inputs are evaluated, not trusted. Outputs are deterministic, not probabilistic.</p>
+        </div>
+
+        <div class="doctrine-card secsy-card">
+            <h3>Collapse Becomes Safety</h3>
+            <p>Collapse restores purity and re‑anchors continuity.</p>
+        </div>
+
+        <div class="doctrine-card secsy-card">
+            <h3>Execution Becomes Governed</h3>
+            <p>Execution follows doctrine, not circumstance.</p>
+        </div>
+
+        <div class="doctrine-card secsy-card">
+            <h3>Replicas Converge Without Negotiation</h3>
+            <p>No consensus rounds. No elections. Just deterministic propagation.</p>
+        </div>
+
+        <div class="doctrine-card secsy-card">
+            <h3>The System Starts Asserting</h3>
+            <p>The moment a system stops behaving like an organism and starts behaving like an instrument.</p>
+        </div>
+
+    </div>
+</section>
+
 <!-- Footer -->
 <footer class="footer">
     <div class="footer-container">
