Add centered 'When SECS = true' label to page headers

--- a/doctrine.html
+++ b/doctrine.html
@@ -65,6 +65,7 @@
     <!-- Doctrinal Surface -->
     <main class="container doctrinal-surface with-nav-offset">
 
+        <div class="when-secs-label" data-text="When SECS = true">When SECS = true</div>
         <h1 class="doctrine-title">SECS Doctrine</h1>
         <p class="doctrine-subtitle">
             The doctrinal substrate that shapes behaviour, guarantees determinism, and anchors the Sovereign system.
