--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@
     <div class="doctrine-grid secsy-grid">
 
         <div class="doctrine-card secsy-header">
-            <h2 class="doctrine-title glitch-title" data-text="WHEN THINGS GET SECSy">
-                WHEN THINGS GET SECSy
+            <h2 class="doctrine-title glitch-title" data-text="When SECS = true">
+                When SECS = true
             </h2>
             <p class="doctrine-subtitle">
                 A new mode of system behaviour emerges.
@@ -408,9 +408,9 @@
         <div class="doctrine-card secsy-card">
             <h3>Continuity Becomes Inevitable</h3>
             <p>Systems stop “trying” to stay in sync. Continuity asserts itself as a structural property.</p>
-        </div>
-
-        <div class="doctrine-card secsy-card">
+                    <h2 class="doctrine-title glitch-title" data-text="When SECS = true">
+                        When SECS = true
+                    </h2>
             <h3>Drift Disappears</h3>
             <p>No more replicas wandering off. Zero‑drift becomes the default state.</p>
         </div>
