--- a/truth-model.html
+++ b/truth-model.html
@@ -65,6 +65,7 @@
     <!-- Truth Model Surface -->
     <main class="container doctrinal-surface with-nav-offset">
 
+        <div class="when-secs-label" data-text="When SECS = true">When SECS = true</div>
         <h1 class="doctrine-title">Truth Model</h1>
         <p class="doctrine-subtitle">
             The formal definition of truth inside SECS Sovereign — the conditions under which 
