--- a/x=true.html
+++ b/x=true.html
@@ -65,6 +65,7 @@
     <!-- x = true Surface -->
     <main class="container doctrinal-surface with-nav-offset">
 
+        <div class="when-secs-label" data-text="When SECS = true">When SECS = true</div>
         <h1 class="doctrine-title">x = true</h1>
         <p class="doctrine-subtitle">
             The physics‑level validation of SECS Sovereign — the truth‑conditions, invariants, 
