--- a/becoming-sovereign.html
+++ b/becoming-sovereign.html
@@ -65,6 +65,7 @@
     <!-- Becoming Sovereign Surface -->
     <main class="container doctrinal-surface with-nav-offset">
 
+        <div class="when-secs-label" data-text="When SECS = true">When SECS = true</div>
         <h1 class="doctrine-title">Becoming Sovereign</h1>
         <p class="doctrine-subtitle">
             The path from external observer to governed participant — the alignment, truth‑conditions, 
