--- a/deeper-secs.html
+++ b/deeper-secs.html
@@ -64,6 +64,7 @@
     <!-- Deep SECS Surface -->
     <main class="container doctrinal-surface with-nav-offset">
 
+        <div class="when-secs-label" data-text="When SECS = true">When SECS = true</div>
         <h1 class="doctrine-title">Deeper SECS</h1>
         <p class="doctrine-subtitle">
             The behavioural evidence of the substrate — reference behaviours, stability fingerprints, 
