Move 'When SECS = true' to navlinks after SECSplained; remove inline header labels

--- a/deeper-secs.html
+++ b/deeper-secs.html
@@ -48,6 +48,7 @@
                 <li><a href="/#SECS" class="nav-link">SECS</a></li>
                 <li><a href="/#quick-secs" class="nav-link">Quick SECS</a></li>
                 <li><a href="/#secs-explained" class="nav-link">SECSplained</a></li>
+                <li><a href="/#secsy" class="nav-link">When SECS = true</a></li>
                 <li><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
                 <li><a href="/deeper-secs.html" class="nav-link active">Deeper SECS</a></li>
                 <li><a href="/x=true.html" class="nav-link">x = true</a></li>
@@ -64,7 +65,6 @@
     <!-- Deep SECS Surface -->
     <main class="container doctrinal-surface with-nav-offset">
 
-        <div class="when-secs-label" data-text="When SECS = true">When SECS = true</div>
         <h1 class="doctrine-title">Deeper SECS</h1>
         <p class="doctrine-subtitle">
             The behavioural evidence of the substrate — reference behaviours, stability fingerprints, 
