--- a/secs-cockpit.html
+++ b/secs-cockpit.html
@@ -48,6 +48,7 @@
                 <li><a href="/#SECS" class="nav-link">SECS</a></li>
                 <li><a href="/#quick-secs" class="nav-link">Quick SECS</a></li>
                 <li><a href="/#secs-explained" class="nav-link">SECSplained</a></li>
+                <li><a href="/#secsy" class="nav-link">When SECS = true</a></li>
                 <li><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
                 <li><a href="/deeper-secs.html" class="nav-link">Deeper SECS</a></li>
                 <li><a href="/x=true.html" class="nav-link">x = true</a></li>
