--- a/truth-model.html
+++ b/truth-model.html
@@ -49,6 +49,7 @@
                 <li><a href="/#SECS" class="nav-link">SECS</a></li>
                 <li><a href="/#quick-secs" class="nav-link">Quick SECS</a></li>
                 <li><a href="/#secs-explained" class="nav-link">SECSplained</a></li>
+                <li><a href="/#secsy" class="nav-link">When SECS = true</a></li>
                 <li><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
                 <li><a href="/deeper-secs.html" class="nav-link">Deeper SECS</a></li>
                 <li><a href="/x=true.html" class="nav-link">x = true</a></li>
@@ -65,7 +66,6 @@
     <!-- Truth Model Surface -->
     <main class="container doctrinal-surface with-nav-offset">
 
-        <div class="when-secs-label" data-text="When SECS = true">When SECS = true</div>
         <h1 class="doctrine-title">Truth Model</h1>
         <p class="doctrine-subtitle">
             The formal definition of truth inside SECS Sovereign — the conditions under which 
