Fix SECS section: split Continuity and Drift tiles; remove stray header

--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
         <div class="doctrine-card secsy-card">
             <h3>Continuity Becomes Inevitable</h3>
             <p>Systems stop “trying” to stay in sync. Continuity asserts itself as a structural property.</p>
-                    <h2 class="doctrine-title glitch-title" data-text="When SECS = true">
-                        When SECS = true
-                    </h2>
+        </div>
+
+        <div class="doctrine-card secsy-card">
             <h3>Drift Disappears</h3>
             <p>No more replicas wandering off. Zero‑drift becomes the default state.</p>
         </div>
