--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <li><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
                 <li><a href="/deeper-secs.html" class="nav-link">Deeper SECS</a></li>
                 <li><a href="/x=true.html" class="nav-link">x = true</a></li>
-                <li><a href="/becoming-sovereign.html" class="nav-link active">Becoming Sovereign</a></li>
-                <li><a href="/secs-cockpit.html" class="nav-link disabled">SECS Cockpit</a></li>
+                 <li class="bottom"><a href="/becoming-sovereign.html" class="nav-link active">Becoming Sovereign</a></li>
+                 <li class="bottom"><a href="/secs-cockpit.html" class="nav-link disabled">SECS Cockpit</a></li>
             </ul>
 
         <div class="menu-toggle" id="menuToggle">
