--- a/deeper-secs.html
+++ b/deeper-secs.html
@@ -49,11 +49,11 @@
                 <li><a href="/#quick-secs" class="nav-link">Quick SECS</a></li>
                 <li><a href="/#secs-explained" class="nav-link">SECSplained</a></li>
                 <li><a href="/#secsy" class="nav-link">When SECS = true</a></li>
-                <li><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
-                <li><a href="/deeper-secs.html" class="nav-link active">Deeper SECS</a></li>
-                <li><a href="/x=true.html" class="nav-link">x = true</a></li>
-                <li><a href="/becoming-sovereign.html" class="nav-link">Becoming Sovereign</a></li>
-                <li><a href="/cockpit.html" class="nav-link disabled">SECS Cockpit (Coming Soon)</a></li>
+                 <li class="bottom"><a href="/doctrine.html" class="nav-link">SECS Doctrinally</a></li>
+                 <li class="bottom"><a href="/deeper-secs.html" class="nav-link active">Deeper SECS</a></li>
+                 <li class="bottom"><a href="/x=true.html" class="nav-link">x = true</a></li>
+                 <li class="bottom"><a href="/becoming-sovereign.html" class="nav-link">Becoming Sovereign</a></li>
+                 <li class="bottom"><a href="/cockpit.html" class="nav-link disabled">SECS Cockpit (Coming Soon)</a></li>
             </ul>
 
             <div class="menu-toggle" id="menuToggle">
